--- a/public/index.css
+++ b/public/index.css
@@ -3,7 +3,7 @@
 body {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   margin: 0;
-  background: #111;
+  background: #a45da4;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
