--- a/public/index.css
+++ b/public/index.css
@@ -3,7 +3,7 @@
 body {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   margin: 0;
-  background: #4b106b;
+  background: linear-gradient(to bottom, #4b106b, #ff6500);
   display: flex;
   flex-direction: column;
   min-height: 100vh;
